ligolang/src/test/contracts/negative/override_option.mligo
type option = int

let main (x,y:bool * bool) = ([] : operation list), (None : option)